[gd_scene load_steps=9 format=3 uid="uid://c3qurrd5vl1ao"]

[ext_resource type="Script" uid="uid://b3ki70ohjb21g" path="res://Scenes/Testing/debug_deck.gd" id="1_76cja"]
[ext_resource type="Script" uid="uid://b6qi20o3p32gq" path="res://Code/Scenes/UI/full_ui.gd" id="2_iuq08"]
[ext_resource type="PackedScene" uid="uid://b4tx6kmy763df" path="res://Scenes/Components/poke_slot.tscn" id="2_lr82k"]
[ext_resource type="PackedScene" uid="uid://dognokjork36j" path="res://Scenes/UI/UICollections/PlayerSide.tscn" id="3_ibwmv"]
[ext_resource type="PackedScene" uid="uid://bdpxdnxpe1f32" path="res://Scenes/Testing/dummy.tscn" id="4_463lc"]
[ext_resource type="PackedScene" uid="uid://c2dyutb22u6x8" path="res://Scenes/Components/slot_ui_actions.tscn" id="5_fed5x"]
[ext_resource type="PackedScene" uid="uid://bm07a7wgsaxxp" path="res://Scenes/Components/on_slot_actions.tscn" id="6_r7ykb"]
[ext_resource type="PackedScene" uid="uid://cobenwsotye1q" path="res://Scenes/Components/PlayerResources.tscn" id="7_bhguv"]

[node name="DebugDeck" type="Control"]
layout_mode = 3
anchors_preset = 0
script = ExtResource("1_76cja")

[node name="FullUI" type="Control" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("2_iuq08")

[node name="PlayerSide" parent="FullUI" instance=ExtResource("3_ibwmv")]
layout_mode = 1
offset_left = 27.76
offset_top = 341.84
offset_right = 27.76
offset_bottom = 341.84

[node name="Dummy" parent="FullUI" instance=ExtResource("4_463lc")]
layout_mode = 1
offset_left = 435.0
offset_top = 13.0
offset_right = 435.0
offset_bottom = 13.0

[node name="CardActions" type="GridContainer" parent="FullUI"]
layout_mode = 0
offset_left = 66.0
offset_top = 66.0
offset_right = 401.0
offset_bottom = 202.0
columns = 2

[node name="Draw" type="Button" parent="FullUI/CardActions"]
layout_mode = 2
text = "Draw Card"

[node name="DrawStarting" type="Button" parent="FullUI/CardActions"]
layout_mode = 2
text = "Draw Starting Hand"

[node name="Discard" type="Button" parent="FullUI/CardActions"]
layout_mode = 2
text = "Discard Card"

[node name="SearchDeck" type="Button" parent="FullUI/CardActions"]
layout_mode = 2
text = "Search Deck"

[node name="Hand" type="Button" parent="FullUI/CardActions"]
layout_mode = 2
text = "View Hand"

[node name="SearchDiscard" type="Button" parent="FullUI/CardActions"]
layout_mode = 2
text = "Search Discard"

[node name="Shuffle2Deck" type="Button" parent="FullUI/CardActions"]
layout_mode = 2
text = "Shuffle Hand to Deck"

[node name="ViewAllDeck" type="Button" parent="FullUI/CardActions"]
layout_mode = 2
text = "ViewAllDeck"

[node name="NodeComponents" type="Node" parent="."]

[node name="SlotUIActions" parent="NodeComponents" node_paths=PackedStringArray("poke_slots", "ui_slots") instance=ExtResource("5_fed5x")]
poke_slots = [NodePath("../Slots/PokeSlot"), NodePath("../Slots/PokeSlot2"), NodePath("../Slots/PokeSlot3"), NodePath("../Slots/PokeSlot4"), NodePath("../Slots/PokeSlot5"), NodePath("../Slots/PokeSlot6")]
ui_slots = [NodePath("../../FullUI/PlayerSide/Main/Active/ActivePokemon"), NodePath("../../FullUI/PlayerSide/Main/Bench/BenchPokemon"), NodePath("../../FullUI/PlayerSide/Main/Bench/BenchPokemon2"), NodePath("../../FullUI/PlayerSide/Main/Bench/BenchPokemon3"), NodePath("../../FullUI/PlayerSide/Main/Bench/BenchPokemon4"), NodePath("../../FullUI/PlayerSide/Main/Bench/BenchPokemon5")]

[node name="OnSlotActions" parent="NodeComponents" instance=ExtResource("6_r7ykb")]

[node name="PlayerResources" parent="NodeComponents" instance=ExtResource("7_bhguv")]

[node name="Slots" type="Node" parent="NodeComponents"]

[node name="PokeSlot" parent="NodeComponents/Slots" node_paths=PackedStringArray("ui_slot") instance=ExtResource("2_lr82k")]
ui_slot = NodePath("../../../FullUI/PlayerSide/Main/Active/ActivePokemon")

[node name="PokeSlot2" parent="NodeComponents/Slots" instance=ExtResource("2_lr82k")]

[node name="PokeSlot3" parent="NodeComponents/Slots" instance=ExtResource("2_lr82k")]

[node name="PokeSlot4" parent="NodeComponents/Slots" instance=ExtResource("2_lr82k")]

[node name="PokeSlot5" parent="NodeComponents/Slots" instance=ExtResource("2_lr82k")]

[node name="PokeSlot6" parent="NodeComponents/Slots" instance=ExtResource("2_lr82k")]

[connection signal="pressed" from="FullUI/CardActions/Draw" to="." method="_on_draw_pressed"]
[connection signal="pressed" from="FullUI/CardActions/DrawStarting" to="." method="_on_draw_starting_pressed"]
[connection signal="pressed" from="FullUI/CardActions/Discard" to="." method="_on_discard_pressed"]
[connection signal="pressed" from="FullUI/CardActions/SearchDeck" to="." method="_on_search_deck_pressed"]
[connection signal="pressed" from="FullUI/CardActions/Hand" to="." method="_on_hand_pressed"]
[connection signal="pressed" from="FullUI/CardActions/SearchDiscard" to="." method="_on_search_discard_pressed"]
[connection signal="pressed" from="FullUI/CardActions/Shuffle2Deck" to="." method="_on_shuffle_2_deck_pressed"]
[connection signal="pressed" from="FullUI/CardActions/ViewAllDeck" to="." method="_on_view_all_deck_pressed"]

[editable path="FullUI/PlayerSide"]
